--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="HMFOODVIETNAM">
 <meta name="author" content="HMFOODVIETNAM">
-<meta property="og:url"                content=https://hophat.tk/#page1" />
+<meta property="og:url"                content=https://facebook.com/hmfoodvietnam" />
 <meta property="og:type"               content="HMFOODVIETNAM" />
 <meta property="og:title"              content="HMFOODVIETNAM" />
 <meta property="og:description"        content="HMFOODVIETNAM" />
