--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <meta name="description" content="HMFOODVIETNAM">
 <meta name="author" content="HMFOODVIETNAM">
 <meta property="og:url"                content=https://facebook.com/hmfoodvietnam" />
-<meta property="og:type"               content="HMFOODVIETNAM" />
-<meta property="og:title"              content="HMFOODVIETNAM" />
-<meta property="og:description"        content="HMFOODVIETNAM" />
+<meta property="og:type"               content="@HMFOODVIETNAM" />
+<meta property="og:title"              content="@HMFOODVIETNAM" />
+<meta property="og:description"        content="@HMFOODVIETNAM" />
 <meta property="og:image"              content="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/274224130_123118323600770_3989373965379234187_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=Bv-7wLNOXxMAX96eHOG&_nc_ht=scontent.fhan14-1.fna&oh=00_AT_9XZ23W7v9jsdGkOskaELh-J5T32vuJridNjx8d_aA7Q&oe=621BBB1D" />
 <!-- Favicons -->
 <link rel="shortcut icon" href="favicon.png">
@@ -413,7 +413,7 @@
                             </div>
                             <div class="review-carousel-item">
                               <div class="text">
-                              <p>“ Chúng mình- HMFood luôn ở bên, sẽ sàng lắng nghe ý kiến của mọi khách hàng để phục vụ các bạn một cách tuyệt vời nhất.</p>
+                              <p>“ Chúng mình- HMFood luôn ở bên, sẵn sàng lắng nghe ý kiến của mọi khách hàng để phục vụ các bạn một cách tuyệt vời nhất.</p>
                               <p> Cảm ơn các bạn thật nhiều."</p>
                               </div>
                               <div class="review-author">
